--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <p class="summary"></p>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://github.com/EUGINELETHAL/E-LEARNING-PLATFORM" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/project-featured.jpg" alt="project name" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/CourseFinal.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
@@ -83,7 +83,7 @@
                                 <div class="desc text-left">                                    
                                     <p>A Learning Management System built with Django Rest and ReactJS. This LMS allows instructors to develop courses with the web application and  give written or video lectures, and provide assessments to their students. Enrolled students will be able to engage with courses and receive the knowledge they so desire.This application is currently under development with the back-end being almost complete </p>
                                 </div><!--//desc-->         
-                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i>LIVE LINK</a>
+                                <a class="btn btn-cta-secondary" href="https://tranquil-reef-98749.herokuapp.com/api/elimu/" target="_blank"><i class="fas fa-thumbs-up"></i>LIVE LINK</a>
                                  <a class="btn btn-cta-secondary" href="https://github.com/EUGINELETHAL/E-LEARNING-PLATFORM/" target="_blank"><i class="fas fa-thumbs-up"></i>GITHUB LINK</a>                
                             </div><!--//item-->
                             <hr class="divider" />
