--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <h3 class="title"><a href="https://github.com/EUGINELETHAL/" target="_blank">NUNUA</a></h3>
                                     <p class="mb-2">Nunua is a Classified Advertising platform built with Django. </p>
                                     <p><a class="more-link" href="https://github.com/EUGINELETHAL/NUNUA" target="_blank"><i class="fas fa-external-link-alt"></i>Github LInk</a>
-                                    <a class="more-link" href="https://www.yumi.co.ke/" target="_blank"><i class="fas fa-external-link-alt"></i>Live  Link</a></p></DIV>
+                                    <a class="more-link" href="https://www.yumi.co.ke/" target="_blank"><i class="fas fa-external-link-alt"></i>Live  Link</a></p>
                                 </div><!--//desc-->                          
 
                      
