--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <p class="summary"></p>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://github.com/EUGINELETHAL/E-LEARNING-PLATFORM" target="_blank">
-                                    <img class="img-fluid project-image" src=img-fluid project-image" src="https://user-images.githubusercontent.com/25798915/92827110-235dee80-f3da-11ea-8427-de9cfa0f3901.png" alt="project name" />
+                                   <img class="img-fluid project-image" src="https://user-images.githubusercontent.com/25798915/92827110-235dee80-f3da-11ea-8427-de9cfa0f3901.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
