--- a/index.html
+++ b/index.html
@@ -136,12 +136,7 @@
                                 <a class="col-md-4 col-12" href="https://github.com/EUGINELETHAL/" target="_blank">
                                 <img class="img-fluid project-image" src="assets/images/projects/jembe.png" alt="project name" />
                                 </a>
-                                <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/EUGINELETHAL/" target="_blank">BOOK-A-MEAL</a></h3>
-                                    <p class="mb-2">A Django web application for booking tables and meals in a restaurant. </p>
-                                    <p><a class="more-link" href="https://github.com/EUGINELETHAL/BOOK-A-MEAL" target="_blank"><i class="fas fa-external-link-alt"></i>Github Link</a></p>
-                                     <p><a class="more-link" href="https://reserve-a-meal5.herokuapp.com/reservation/" target="_blank"><i class="fas fa-external-link-alt"></i>Live  Link</a></p>
-                                </div><!--//desc-->                          
+                                <!--//desc-->                          
                             </div><!--//item-->                            
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/EUGINELETHAL/" target="_blank">
