--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                               
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/EUGINELETHAL/" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/" alt="project name" />Simple 
+                                <img class="img-fluid project-image" src="assets/images/projects/bulk.png" alt="project name" />Simple 
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/EUGINELETHAL/POST-REDUX" target="_blank">Bulk-django-SMS</a></h3>
+                                    <h3 class="title"><a href="#" target="_blank">Bulk-django-SMS</a></h3>
                                     <p class="mb-2"> A Simple bulk sms application with django and Africa's talking APIs</p>
                                     <p><a class="more-link" href="https://github.com/EUGINELETHAL/bulk-django-sms1"></i>Github link</a></p>
                                 </div>
