--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/startupkit-bootstrap-theme-for-saas-startups/" target="_blank">Order Api</a></h3>
-                                    <p class="mb-2">Order-Api is a simple REST API used to upload customers orders built with Django Rest Framework.After an order is created,the customer is notified using sms. https://backend-challenge5.her…</p>
+                                    <p class="mb-2">Order-Api is a simple REST API used to upload customers orders.Customer authenticates via google OAuth 2.0,after which he/she creates an order.After an order is created,the customer is notified using sms.Technologies used Django, DRF,Docker,Travis,Heroku,AfricaisTalking,Google OAUTH2</p>
                                     <p><a class="more-link" href="https://backend-challenge5.herokuapp.com/oidc/authenticate/" target="_blank"><i class="fas fa-external-link-alt"></i>Demo</a></p>
                             </div><!--//item-->
                             <!--//desc--> 
@@ -103,7 +103,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="https://github.com/EUGINELETHAL/" target="_blank">NUNUA</a></h3>
-                                    <p class="mb-2">Nunua is a Classified Advertising platform built with Django. </p>
+                                    <p class="mb-2">Nunua/Yumi is a Classified Advertising platform built with Django. </p>
                                     <p>
                                     <a class="more-link" href="https://www.yumi.co.ke/" target="_blank"><i class="fas fa-external-link-alt"></i>Demo</a></p>
                                 </div><!--//desc-->                          
@@ -116,7 +116,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="https://github.com/EUGINELETHAL/Miniflix-v2" target="_blank">MINIFLIX</a></h3>
-                                    <p class="mb-2">Miniflix is a simple react that  allows users to view popular  movies and also search for them</p>
+                                    <p class="mb-2">Miniflix is a simple react platform that  allows users to view popular  movies and also search for them.Movies are fetched from TMDB.</p>
                                     <p><a class="more-link" href="https://euginelethal.github.io/Miniflix-v2/" target="_blank"><i class="fas fa-external-link-alt"></i>Demo Link</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
