modified portfolio' gi

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                                         alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/EUGINELETHAL/" target="_blank">TODO-ASP.NET-API</a></h3>
-                                    <p class="mb-2">A simple TODO RestFul API in ASP.NET Core </p>
+                                    <h3 class="title"><a href="https://github.com/EUGINELETHAL/" target="_blank">BLOG-ASP.NET-API</a></h3>
+                                    <p class="mb-2">A simple RestFul BLOG API built with  ASP.NET Core used for learning CRUD  </p>
                                     <p>
-                                        <a class="more-link" href="https://github.com/EUGINELETHAL/TODOAPI" target="_blank"><i
+                                        <a class="more-link" href="https://github.com/EUGINELETHAL/BLOG-API-NET" target="_blank"><i
                                                 class="fas fa-external-link-alt"></i>Demo</a>
                                     </p>
                                 </div>
