--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         <li>Org Roles and Permissions</li>
                                       <li>  Transition(State Design Pattern),,</li>
                                        <li> Django_channels and Redis for RealTime functionality,</li>
-                                       <li>Africa's talking for Sending SMS<</li>
+                                       <li>Africa's talking for Sending SMS</li>
                                        <li> Pytests for unittesting</li>
                                         </ul> 
                                 </div><!--//desc-->         
