--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                                     <h3 class="title"><a href="https://github.com/EUGINELETHAL/" target="_blank">NUNUA</a></h3>
                                     <p class="mb-2">Nunua/Yumi is a Classified Advertising platform built with Django. </p>
                                     <p>
-                                    <a class="more-link" href="https://www.yumi.co.ke/" target="_blank"><i class="fas fa-external-link-alt"></i>Demo</a></p>
+                                        <a class="more-link" href="https://www.recurse.com/applications/21683?token=1965566418b08b7d" target="_blank"><i class="fas fa-external-link-alt"></i>Demo</a></p>
+                                    <a class="more-link" href="https://gist.github.com/DevBramz/6e663a12910a36016737b4505c01c1ea" target="_blank"><i class="fas fa-external-link-alt"></i>Demo</a></p>
                                 </div><!--//desc-->                          
 
                       </div>
